Attempts to fix selfie.jpg on mobile
rendering was in wrong spot, attempting to redraw on different
coordinates

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -323,4 +323,7 @@ section.section-minimal iframe {
     section {
         padding: 4em 1em;
     }
+    .bg-5 {
+        background-position: center;
+    }
 }
